Make wheel help link opne in new tab

--- a/src/brixit/templates/help.html
+++ b/src/brixit/templates/help.html
@@ -21,7 +21,7 @@
             <li><strong>Skip Part</strong> If the picture is good, but you cannot find a part by searching, skip this part and move on.</li>
             <li><strong>Unknown Wheel</strong> If the picture is good, but it contains a wheel that you cannot identify. </li>
         </ul>
-        <p>If you're struggling to identify wheels/tires, <a href="http://wheels.sariel.pl/">this reference from Sariel</a> may be helpful.</p>
+        <p>If you're struggling to identify wheels/tires, <a href="http://wheels.sariel.pl/" target="_blank">this reference from Sariel</a> may be helpful.</p>
 
     </section>
     <section id="dimensions">
