Update help file

--- a/src/brixit/templates/help.html
+++ b/src/brixit/templates/help.html
@@ -44,6 +44,10 @@
             <li><strong>{{sub[0]}}:</strong> {{sub[1]}}</li>
             {% endfor %}
         </ul>
+        <p>The search engine in BriXit will also stem most words to their root. For example, the word "inverted" will be shortened
+            to "invert". This treatment is applied to all parts in the database, and also to search queries. Plurals are also
+            universally converted to singular form. If you wanted to search for "Inverted pin holes with larger fasteners" you could
+            simply enter "invert pin hole large fasten"</p>
     </section>
     <section id="multi">
         <h2>Multi-dimensional parts</h2>
@@ -59,18 +63,26 @@
             complex names. I have been adding them to this page in the hope that it will save others some headache</p>
         <figure class="part">
             <img src="http://img.bricklink.com/ItemImage/PL/47456.png">
-            <figcaption>"Slope, Curved 3 x 2 x 2/3 with Two Studs, Wing End". The killer on this one was the "x 2/3" portion of the name. (See the
+            <figcaption>"Slope, Curved 3 x 2 x 2/3 with Two Studs, Wing End"<br>The killer on this one was the "x 2/3" portion of the name. (See the
                 multidimensional parts section)</figcaption>
         </figure>
         <figure class="part">
             <img src="https://img.bricklink.com/ItemImage/PN/85/52501.png">
-            <figcaption>"Slope, Inverted 45 6 x 1 Double with 1 x 4 Cutout". I didn't ever think this would be a "slope" category part, and "cutout"
+            <figcaption>"Slope, Inverted 45 6 x 1 Double with 1 x 4 Cutout"<br>I didn't ever think this would be a "slope" category part, and "cutout"
                 was not obvious either.</figcaption>
         </figure>
         <figure class="part">
             <img src="http://img.bricklink.com/ItemImage/PL/41532.png">
-            <figcaption>"Hinge Cylinder 1 x 3 Locking with 1 Finger and Pin with Round Hole and Friction Ridges Lengthwise on Ends". The takeaway here is
+            <figcaption>"Hinge Cylinder 1 x 3 Locking with 1 Finger and Pin with Round Hole and Friction Ridges Lengthwise on Ends"<br>The takeaway here is
                 that these male hinge connectors that click are tagged "Locking with 1 Finger".</figcaption>
+        </figure>
+        <figure class="part">
+            <img src="https://img.bricklink.com/ItemImage/PN/10/6215.png">
+            <figcaption><strong>"Slope, Curved 3 x 2 x 1 with Four Studs"</strong><br>This is one of the worst offenders in the category of "3 dimensional parts that should only have 2 dimensions" I've ever seen.</figcaption>
+        </figure>
+        <figure class="part">
+            <img src="https://img.bricklink.com/ItemImage/PN/7/61409.png">
+            <figcaption><strong>"LegoSlope 18 2 x 1 x 2/3 with 4 Slots"</strong><br>Appaerently "Grille" "grate" and "vent" are right out.</figcaption>
         </figure>
 
     </section>
